<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/tvCongratulations"
        android:layout_width="378dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/karla"
        android:text="@string/congratulations"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="5.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="378dp"
        android:layout_height="0dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/karla"
        android:text="@string/your_score_is"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintDimensionRatio="6.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCongratulations" />

    <TextView
        android:id="@+id/tvPercentage"
        android:layout_width="99dp"
        android:layout_height="0dp"
        android:layout_marginStart="155dp"
        android:fontFamily="@font/karla"
        android:text="@string/_100"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="2.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScore" />

    <ImageView
        android:id="@+id/ivMedal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_medal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPercentage" />

    <View
        android:id="@+id/vPlayAgain"
        android:layout_width="378dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        app:layout_constraintDimensionRatio="5.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMedal" />

    <TextView
        android:layout_width="221dp"
        android:layout_height="26dp"
        android:fontFamily="@font/karla"
        android:text="@string/play_again"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="bold"
        android:id="@+id/tvPlay"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="@id/vPlayAgain"
        app:layout_constraintStart_toStartOf="@id/vPlayAgain"
        app:layout_constraintEnd_toEndOf="@id/vPlayAgain"
        app:layout_constraintBottom_toBottomOf="@id/vPlayAgain"
        android:layout_marginStart="110dp"/>

    <TextView
        android:layout_width="63dp"
        android:layout_height="21dp"
        android:id="@+id/tvHome"
        android:text="Home"
        android:textSize="20sp"
        android:textStyle="bold"
        android:clickable="true"
        android:fontFamily="@font/karla"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/vPlayAgain"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="172dp"
        android:layout_marginTop="20dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>